@@ -1,3 +1,10 @@
+2005-08-20  Sven Panne  <sven.panne@aedion.de>
+	* linux/src/al_ext.c, linux/src/al_main.c,
+	linux/src/alc/alc_context.c, linux/test/Makefile.in: Merged Ryan
+	C. Gordon's basic support for capture.
+
+	* linux/test/testcapture2.c: Added.
+
 2005-08-19  Sven Panne  <sven.panne@aedion.de>
 	* linux/configure.ac, linux/src/al_bpool.c, linux/src/al_buffer.c,
 	linux/src/al_config.c, linux/src/al_debug.c,
